# euler-parser

./: .gitignore  README.md  bump  conftest.py  euler_train.md  euler_train_schema.json  example_config.json  example_sparse_depth_config.json  init_cache.py  main.py  metrics_config.json  metrics_exaplanation.md  package-lock.json  performance.md  pyproject.toml  requirements.txt
euler_eval/: __init__.py  cli.py  config_paths.py  data.py  evaluate.py  sanity_checker.py
euler_eval/metrics/: __init__.py  fid_kid.py  gpu_depth_batch.py  high_freq_energy.py  lpips_metric.py  normal_consistency.py  psnr.py  rgb_edge_f1.py  rgb_lpips.py  rgb_psnr_ssim.py  rho_a.py  tail_errors.py  utils.py
euler_eval/utils/: hierarchy_parser.py
src/: data.py  evaluate.py  sanity_checker.py
src/metrics/: __init__.py  absrel.py  daniel_error.py  depth_binned_error.py  depth_edge_f1.py  fid_kid.py  lpips_metric.py  normal_consistency.py  psnr.py  rmse.py  scale_invariant_log.py  ssim.py  utils.py
tests/: conftest.py  test_alignment.py  test_cli_device.py  test_config.py  test_data.py  test_data_builders.py  test_depth_alignment_output.py  test_evaluate_helpers.py  test_init_cache.py  test_integration.py  test_meta_output.py  test_metrics_utils.py  test_rgb_fid_output.py  test_save_results.py  test_sparse_depth.py
tests/mock_files/: calibration_output.json  depth_output.json  rgb_output.json  segmentation_output.json
