[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euler-eval"
version = "0.3.0"
description = "Depth map evaluation toolkit with comprehensive metrics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Depth Eval Contributors"}
]
keywords = ["depth", "evaluation", "metrics", "computer-vision", "3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "Pillow>=8.0.0",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "lpips>=0.1.4",
    "tqdm>=4.62.0",
    "euler-loading",
    "ds-crawler",
]

[project.optional-dependencies]
logging = [
    "euler-train",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.0.260",
]

[project.scripts]
euler-eval = "euler_eval.cli:main"

[tool.uv.sources]
ds-crawler = { git = "https://github.com/d-rothen/ds-crawler" }
euler-loading = { git = "https://github.com/d-rothen/euler-loading" }
euler-train = { git = "https://github.com/d-rothen/euler-train" }

[tool.setuptools.packages.find]
where = ["."]
include = ["euler_eval*"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
